CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745, STR #942)
	- Fixed integration of Fl_Input_Choice into Fluid (STR #879)
	- New windows touching the right screen border would be 
	  positioned all the way to the left (STR #898)
	- Made pie drawing size for WIN32 and OS X the same as X11 (STR #905)
	- Fixed OS X issue with OpenGL windows inside of Tabs (STR #602)
	- Fluid Code Editor would occasionally not draw the last character
	  in the buffer (STR #798)
	- Fluid Declaration private flag fixed (STR #799)
	- Fluid overlay now shows a seperate bounding box of selected
	  items with correct handles and a dotted boundig box for all 
	  labels (STR #790)
	- Fixed left overhang of large chracters in Fl_Input_ (STR #941)
	- Fixed button resizing in File Chooser (STR #884)
	- Fixed Fluid redraw issue (STR #912)
	- Added 32bit BMP Image file format support (STR #918)
	- Value Sliders would not receive focus when clicked on (STR #911)
	- Added redraw of some widgets to show focus change (STR #910)
	- Fl::set_font would not clear 'pretty' name (STR #902)
	- Fixed unescaped '@' in fonts demo (STR #867)
	- Fluid should not open the Display connection anymore if
	  creating code only (STR #904)
	- Improved hidden copy / ctor implementation (STR #860)
	- Increased matrix stack depth and added over/underfolw error
	  (STR #924)
	- Reverted Mac Carbon Clipping simplification that broke
	  subwindow clipping (STR #908, SVN r4386)
	- Fixed bitmap scaling code
	- Fixed tiny memory leak (STR #878)
	- Fixed hang on corrupt jpeg (STR #915)
	- Fixed static allocation of font buffer in demo (STR #909)
	- Added symbols 'refresh', 'reload', 'undo', and 'redo'.
	- Fixed focus loss on Fl_Window:resize()
	- Fl::delete_widget would hang fl_wait after deleting the
	  window (STR #679)
	- Fl::paste would sometimes not recoginze external 
	  changes of the clipboard (STR #722)
	- Clipping fixes for OSX
	- Removed attempt to find items via 