@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745, STR #942)
+	- Floating point input field allows characters from
+	  current locale (STR #903)
 	- Fixed integration of Fl_Input_Choice into Fluid (STR #879)
 	- New windows touching the right screen border would be 
 	  positioned all the way to the left (STR #898)
